Reorganized, added text and summaries

--- a/index.html
+++ b/index.html
@@ -48,16 +48,58 @@
   <article data-timings="">
     <h1>You may be fooling yourself about reliability</h1>
 
-<p>Industries are at different levels of maturity in using quantitative approaches to reliability engineering.</p>
+<p>Suppose we are an equipment supplier for projects in which hardware systems such as motors are installed, run until they fail or are removed for some other reason, and are then replaced. Our life data consists of a mix of times until failure, lives that ended without a failure, and lives that are ongoing. Let&#39;s look at a data set of 40 such lives from two projects or &quot;Assets&quot;, with run days and variable indicating whether a failure ocurred. What are some ways to summarize these data?</p>
 
-<pre><code class="r">load(&quot;static_life_data.RData&quot;)
-library(survival)
-stat1.fit &lt;- survfit(Surv(time=RDays, event=Failed) ~ 1, static_life_data.df)
-
-plot(stat1.fit, main=&quot;Survival Curve&quot;, xlab=&quot;Run Days&quot;, ylab=&quot;Proportion Surviving&quot;)
+<pre><code class="r">load(&quot;static_life_data.RData&quot;) # comes in as life_data.df
+knitr::kable(xtabs(~ life_data.df$Asset + life_data.df$Failed), caption=&quot;Lives by Project Name and Failed Status&quot;)
 </code></pre>
 
-<p><img src="assets/fig/unnamed-chunk-1-1.png" alt="plot of chunk unnamed-chunk-1"> </p>
+<table><thead>
+<tr>
+<th align="left"></th>
+<th align="right">FALSE</th>
+<th align="right">TRUE</th>
+</tr>
+</thead><tbody>
+<tr>
+<td align="left">Abbot</td>
+<td align="right">6</td>
+<td align="right">14</td>
+</tr>
+<tr>
+<td align="left">Costello</td>
+<td align="right">5</td>
+<td align="right">15</td>
+</tr>
+</tbody></table>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-2" style="background:;">
+  <hgroup>
+    <h2>Some &quot;Common-Sense&quot; Methods</h2>
+  </hgroup>
+  <article data-timings="">
+    <p>People try to average total time per failure, or just the average of the failures:</p>
+
+<pre><code class="r">load(&quot;static_life_data.RData&quot;) # comes in as life_data.df
+paste(&quot;Total Run Days per Failure:&quot;, with(life_data.df, round(sum(RDays)/sum(Failed==TRUE))))
+</code></pre>
+
+<pre><code>## [1] &quot;Total Run Days per Failure: 314&quot;
+</code></pre>
+
+<p>If there are many lives that are &quot;censored&quot; (meaning they did not run until failure) then this method can lead to absurd results. The longest life in this data set is 336 days. It seems odd for 314 days to be a typical life. </p>
+
+<pre><code class="r">paste(&quot;Average Run Days of Failed Motors:&quot;, round(mean(life_data.df$RDays[life_data.df$Failed == TRUE])))
+</code></pre>
+
+<pre><code>## [1] &quot;Average Run Days of Failed Motors: 220&quot;
+</code></pre>
+
+<p>This average tells us something about the motors that failed, but it ignores all the motors that didn&#39;t fail, including several with lives exceeding this average.</p>
 
   </article>
   <!-- Presenter Notes -->
@@ -65,31 +107,62 @@ plot(stat1.fit, main=&quot;Survival Curve&quot;, xlab=&quot;Run Days&quot;, ylab
 
 <slide class="class" id="id" style="background:;">
   <hgroup>
-    <h2>Slide 2 Title Hear</h2>
+    <h2>Slide 4 Title Here</h2>
   </hgroup>
   <article data-timings="">
-    <h1>Why Did I Make This?</h1>
+    <pre><code class="r">load(&quot;static_life_data.RData&quot;) # comes in as life_data.df
+library(survival)
+stat1.fit &lt;- survfit(Surv(time=RDays, event=Failed) ~ 1, life_data.df)
+summary(stat1.fit)
+</code></pre>
 
-<h1>Why Can&#39;t We Just Do it the Old Way?</h1>
-
-<ul>
-<li>Censoring</li>
-</ul>
+<pre><code>## Call: survfit(formula = Surv(time = RDays, event = Failed) ~ 1, data = life_data.df)
+## 
+##  time n.risk n.event survival std.err lower 95% CI upper 95% CI
+##    63     40       1   0.9750  0.0247      0.92780        1.000
+##    86     39       1   0.9500  0.0345      0.88480        1.000
+##   144     37       1   0.9243  0.0420      0.84553        1.000
+##   152     36       1   0.8986  0.0481      0.80922        0.998
+##   173     35       1   0.8730  0.0531      0.77486        0.984
+##   179     34       1   0.8473  0.0574      0.74192        0.968
+##   186     33       1   0.8216  0.0611      0.71011        0.951
+##   194     32       1   0.7959  0.0644      0.67922        0.933
+##   195     31       1   0.7703  0.0672      0.64913        0.914
+##   197     30       1   0.7446  0.0697      0.61973        0.895
+##   206     29       1   0.7189  0.0719      0.59094        0.875
+##   208     27       2   0.6657  0.0758      0.53251        0.832
+##   220     23       1   0.6367  0.0778      0.50107        0.809
+##   223     22       1   0.6078  0.0795      0.47034        0.785
+##   224     20       1   0.5774  0.0811      0.43841        0.760
+##   236     19       1   0.5470  0.0823      0.40724        0.735
+##   247     17       2   0.4827  0.0843      0.34274        0.680
+##   248     15       1   0.4505  0.0846      0.31176        0.651
+##   251     14       1   0.4183  0.0845      0.28160        0.621
+##   253     13       1   0.3861  0.0839      0.25226        0.591
+##   257     12       1   0.3539  0.0828      0.22375        0.560
+##   259     10       1   0.3185  0.0817      0.19263        0.527
+##   268      9       1   0.2832  0.0800      0.16280        0.492
+##   310      5       2   0.1699  0.0784      0.06875        0.420
+##   318      3       1   0.1133  0.0698      0.03385        0.379
+##   328      2       1   0.0566  0.0531      0.00901        0.356
+</code></pre>
 
   </article>
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-3" style="background:;">
+<slide class="" id="slide-4" style="background:;">
   <hgroup>
-    <h2>Slide 3</h2>
+    <h2>Slide 5</h2>
   </hgroup>
   <article data-timings="">
-    <h1>Survival Plot</h1>
+    <pre><code class="r">load(&quot;static_life_data.RData&quot;) # comes in as life_data.df
+library(survival)
+stat1.fit &lt;- survfit(Surv(time=RDays, event=Failed) ~ 1, life_data.df)
+plot(stat1.fit, main=&quot;Survival Curve&quot;, xlab=&quot;Run Days&quot;, ylab=&quot;Proportion Surviving&quot;)
+</code></pre>
 
-<ul>
-<li>Plot here</li>
-</ul>
+<p><img src="assets/fig/unnamed-chunk-2-1.png" alt="plot of chunk unnamed-chunk-2"> </p>
 
   </article>
   <!-- Presenter Notes -->
@@ -107,14 +180,20 @@ plot(stat1.fit, main=&quot;Survival Curve&quot;, xlab=&quot;Run Days&quot;, ylab
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=2 title='Slide 2 Title Hear'>
+        data-slide=2 title='Some &quot;Common-Sense&quot; Methods'>
          2
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=3 title='Slide 3'>
+        data-slide=3 title='Slide 4 Title Here'>
          3
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=4 title='Slide 5'>
+         4
       </a>
     </li>
   </ul>
