--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 <p>Suppose we are an equipment supplier for projects in which hardware systems such as motors are installed, run until they fail or are removed for some other reason, and are then replaced. Our life data consists of a mix of times until failure, lives that ended without a failure, and lives that are ongoing. Let&#39;s look at a data set of 40 such lives from two projects or &quot;Assets&quot;, with run days and variable indicating whether a failure ocurred. What are some ways to summarize these data?</p>
 
 <pre><code class="r">load(&quot;static_life_data.RData&quot;) # comes in as life_data.df
-knitr::kable(xtabs(~ life_data.df$Asset + life_data.df$Failed), caption=&quot;Lives by Project Name and Failed Status&quot;)
+knitr::kable(xtabs(~ life_data.df$Asset + life_data.df$Failed), 
+             caption=&quot;Lives by Project Name and Failed Status&quot;)
 </code></pre>
 
 <table><thead>
@@ -93,7 +94,8 @@ paste(&quot;Total Run Days per Failure:&quot;, with(life_data.df, round(sum(RDay
 
 <p>If there are many lives that are &quot;censored&quot; (meaning they did not run until failure) then this method can lead to absurd results. The longest life in this data set is 336 days. It seems odd for 314 days to be a typical life. </p>
 
-<pre><code class="r">paste(&quot;Average Run Days of Failed Motors:&quot;, round(mean(life_data.df$RDays[life_data.df$Failed == TRUE])))
+<pre><code class="r">load(&quot;static_life_data.RData&quot;) # comes in as life_data.df
+paste(&quot;Average Run Days of Failed Motors:&quot;, round(mean(life_data.df$RDays[life_data.df$Failed == TRUE])))
 </code></pre>
 
 <pre><code>## [1] &quot;Average Run Days of Failed Motors: 220&quot;
@@ -107,45 +109,26 @@ paste(&quot;Total Run Days per Failure:&quot;, with(life_data.df, round(sum(RDay
 
 <slide class="class" id="id" style="background:;">
   <hgroup>
-    <h2>Slide 4 Title Here</h2>
+    <h2>Survival Analysis Makes More Sense</h2>
   </hgroup>
   <article data-timings="">
-    <pre><code class="r">load(&quot;static_life_data.RData&quot;) # comes in as life_data.df
+    <p>Using standard methods such as the survfit function in the R statistical programming language to produce <a href="http://en.wikipedia.org/wiki/Kaplan-Meier_estimator">Kaplan-Meier estimates</a> of reliability produces compact and useful information, such as this survival table, summarized at specific times:</p>
+
+<pre><code class="r">load(&quot;static_life_data.RData&quot;) # comes in as life_data.df
 library(survival)
 stat1.fit &lt;- survfit(Surv(time=RDays, event=Failed) ~ 1, life_data.df)
-summary(stat1.fit)
+summary(stat1.fit, time=c(90, 180, 270, 365))
 </code></pre>
 
 <pre><code>## Call: survfit(formula = Surv(time = RDays, event = Failed) ~ 1, data = life_data.df)
 ## 
 ##  time n.risk n.event survival std.err lower 95% CI upper 95% CI
-##    63     40       1   0.9750  0.0247      0.92780        1.000
-##    86     39       1   0.9500  0.0345      0.88480        1.000
-##   144     37       1   0.9243  0.0420      0.84553        1.000
-##   152     36       1   0.8986  0.0481      0.80922        0.998
-##   173     35       1   0.8730  0.0531      0.77486        0.984
-##   179     34       1   0.8473  0.0574      0.74192        0.968
-##   186     33       1   0.8216  0.0611      0.71011        0.951
-##   194     32       1   0.7959  0.0644      0.67922        0.933
-##   195     31       1   0.7703  0.0672      0.64913        0.914
-##   197     30       1   0.7446  0.0697      0.61973        0.895
-##   206     29       1   0.7189  0.0719      0.59094        0.875
-##   208     27       2   0.6657  0.0758      0.53251        0.832
-##   220     23       1   0.6367  0.0778      0.50107        0.809
-##   223     22       1   0.6078  0.0795      0.47034        0.785
-##   224     20       1   0.5774  0.0811      0.43841        0.760
-##   236     19       1   0.5470  0.0823      0.40724        0.735
-##   247     17       2   0.4827  0.0843      0.34274        0.680
-##   248     15       1   0.4505  0.0846      0.31176        0.651
-##   251     14       1   0.4183  0.0845      0.28160        0.621
-##   253     13       1   0.3861  0.0839      0.25226        0.591
-##   257     12       1   0.3539  0.0828      0.22375        0.560
-##   259     10       1   0.3185  0.0817      0.19263        0.527
-##   268      9       1   0.2832  0.0800      0.16280        0.492
-##   310      5       2   0.1699  0.0784      0.06875        0.420
-##   318      3       1   0.1133  0.0698      0.03385        0.379
-##   328      2       1   0.0566  0.0531      0.00901        0.356
+##    90     38       2    0.950  0.0345        0.885        1.000
+##   180     33       4    0.847  0.0574        0.742        0.968
+##   270      8      19    0.283  0.0800        0.163        0.492
 </code></pre>
+
+<p>Since the method has been standardized for many years, it is available in many software products ... <em>if you know how to use those products!</em></p>
 
   </article>
   <!-- Presenter Notes -->
@@ -153,16 +136,14 @@ summary(stat1.fit)
 
 <slide class="" id="slide-4" style="background:;">
   <hgroup>
-    <h2>Slide 5</h2>
+    <h2>There&#39;s an App for that!</h2>
   </hgroup>
   <article data-timings="">
-    <pre><code class="r">load(&quot;static_life_data.RData&quot;) # comes in as life_data.df
-library(survival)
-stat1.fit &lt;- survfit(Surv(time=RDays, event=Failed) ~ 1, life_data.df)
-plot(stat1.fit, main=&quot;Survival Curve&quot;, xlab=&quot;Run Days&quot;, ylab=&quot;Proportion Surviving&quot;)
-</code></pre>
+    <p>The <a href="http://dhimrich.shinyapps.io/CourseraSurvival/">Survival Analysis Calculator</a> puts the power and convenience of survival analysis with R in the hands of anyone with a web browser. Future versions will enable users to upload data sets and select more options for output. Please give the demonstrator a try, and see how easy it is to produce survival tables and standard survival curve plots that are so helpful in visualizing reliability peformance:</p>
 
-<p><img src="assets/fig/unnamed-chunk-2-1.png" alt="plot of chunk unnamed-chunk-2"> </p>
+<p><img src="assets/fig/plots-1.png" alt="plot of chunk plots"> </p>
+
+<p>The GitHub repository for this RStudio Shiny App is <a href="https://github.com/dhimrich/CourseraSurvivalApp">here</a>, and I&#39;d like to hear what you think!</p>
 
   </article>
   <!-- Presenter Notes -->
@@ -186,13 +167,13 @@ plot(stat1.fit, main=&quot;Survival Curve&quot;, xlab=&quot;Run Days&quot;, ylab
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=3 title='Slide 4 Title Here'>
+        data-slide=3 title='Survival Analysis Makes More Sense'>
          3
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=4 title='Slide 5'>
+        data-slide=4 title='There&#39;s an App for that!'>
          4
       </a>
     </li>
